--- a/app/views/learn/introduction_to_rdf_and_rdfa.html.erb
+++ b/app/views/learn/introduction_to_rdf_and_rdfa.html.erb
@@ -21,7 +21,7 @@ There are 3 things that makes an RDF statement: the subject, the predicate and t
       </p>
       <pre><code class="language-markup"><%=h '  <http://www.od4d.org/about#about>  rdf:type  schema:Article' %></code></pre>
       <p>
-        RDF needs Uniform Resource Identifiers to specify subjects and predicates. To know more about them <a http="http://www.w3.org/TR/cooluris/">here</a>
+        RDF needs Uniform Resource Identifiers to specify subjects and predicates. To know more about them <a href="http://www.w3.org/TR/cooluris/">here</a>
       </p>
       <pre><code class="language-markup"><%=h '  <http://www.od4d.org/about#about>' %></code></pre>
     </section>
@@ -41,7 +41,7 @@ There are 3 things that makes an RDF statement: the subject, the predicate and t
           The @prefix, that is an <a href="http://www.w3.org/TeamSubmission/turtle/">turtle</a> expression, serves to declare the abreviation of the URI, specified by a <a href="http://www.w3.org/blog/data/2014/01/06/vocabularies-at-w3c/">vocabulary</a> described by RDF triples in a single domain. Vocabularies defines what triple means, because it allows desambiguation.
         </p>
         <p>
-          RDFa lite is a simple version of <a href="http://www.w3.org/TR/rdfa-primer/">RDFa Primer</a> and it's used to describe RFD to browsers. You can read the documentation of RDFa Lite at W3C's <a http="http://www.w3.org/TR/rdfa-lite/">docs</a>.
+          RDFa lite is a simple version of <a href="http://www.w3.org/TR/rdfa-primer/">RDFa Primer</a> and it's used to describe RFD to browsers. You can read the documentation of RDFa Lite at W3C's <a href="http://www.w3.org/TR/rdfa-lite/">docs</a>.
         </p>
       </section>
       <br />
