--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,13 +22,13 @@
     <aside class="home-right">
       <h1>Get Started</h1>
       <h2><a href="/learn/how-to-create-a-semantic-page">How to create a semantic page</a></h2>
-      <p>Understanting RDF concept </br>
-         RDFa and RDF: WTF? </br>
+      <p>Understanting RDF concept <br>
+         RDFa and RDF: WTF? <br>
          Examples
       </p>
       <h2><a href="/learn/how-to-integrate">How to connect your site with us</a></h2>
-      <p>Understanting how to connect </br>
-         Read our terms and conditions </br>
+      <p>Understanting how to connect <br>
+         Read our terms and conditions <br>
          Examples
       </p>
     </aside>
