--- a/app/views/learn/how_to_integrate_with_od4d.html.erb
+++ b/app/views/learn/how_to_integrate_with_od4d.html.erb
@@ -20,7 +20,7 @@
     <ol>
       <li>You deliver RSS feeds
           RSS means
-          Remember that RSS (Really Simple Syndication) is just a diferent way to write XML (Extensible Markup Language). So, you must use the <a href="http://www.w3.org/TR/REC-xml" title="W3C XML 1.0 Recomendations Fifth Edition Site"/>XML specification</a> in it's latest version.
+          Remember that RSS (Really Simple Syndication) is just a diferent way to write XML (Extensible Markup Language). So, you must use the <a href="http://www.w3.org/TR/REC-xml" title="W3C XML 1.0 Recomendations Fifth Edition Site">XML specification</a> in it's latest version.
       </li>
       <li>
           For now, we only provide semantic content using your RSS feeds, using a <a href="https://github.com/W3CBrasil/od4d-rss-to-turtle">converter</a>. But in the next months we will work in something that will take advantage of your semantic content to link it using RDF format. Then we will have a OD4D connected network, provided by the best aspects of the Semantic Web and Linked Data.
