--- a/app/views/learn/how_to_integrate_with_od4d.html.erb
+++ b/app/views/learn/how_to_integrate_with_od4d.html.erb
@@ -10,21 +10,20 @@
   <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
   <meta property="schema:keywords" content="howto;integration;od4d"/>
 
-  <p><em>OD4D goes global.</em></p>
-  <p>The project, started with an iniciative of W3C Brazil and the Economic Commission for Latin America and the Caribbean (ECLAC) had the intention of research emerging impacts and potentialities of open data for public policy in Latin America and the Caribbean and it was funded by the International Development and Research Center of Canada (IDRC).</p>
+  <h2>OD4D goes global</h2>
+  <p>The project, started with an iniciative of W3C Brazil and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><em>ECLAC</em></a>) had the intention of research emerging impacts and potentialities of open data for public policy in Latin America and the Caribbean and it was funded by the International Development and Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><em>IDRC</em></a>).</p>
   <p>Due to the success of the OD4D initiative, the project will become a global network of research and experimentation, in order to encourage and boost, besides being a hub of connection between the actors who are in the Open Data environment today.</p>
   <p>This includes being an example itself of an Open Data website, of course. To know more about the technical details of this project you can acess it's GitHub repository or ask us about it. </p>
-  <p>You can be part of this Network. If you have a research institute or even an academic paper, you can let the network know by connecting your website to OD4D's Network using simple  <a href="http://www.w3.org/standards/semanticweb/data">linked data</a> concepts. In case you  have no idea on how to work with Linked Data, <%= link_to("read this", controller: "learn", action: "how_to_create_a_semantic_page") %>.</p>
-  <p> You can start with step one and then jump in to the second step described below: </p>
+  <p>You can be part of this Network. If you have a research institute or even an academic paper, you can let the network know by connecting your website to OD4D's Network using simple  <a href="http://www.w3.org/standards/semanticweb/data"><em>linked data</em></a> concepts. In case you  have no idea on how to work with Linked Data, <em><%= link_to("read this", controller: "learn", action: "how_to_create_a_semantic_page") %></em>.</p>
+  <h2> You can start with step one and then jump in to the second step described below: </h2>
+  <br> 
+  <h3>Step 1</h3>
   <p>
-    <ol>
-      <li>You deliver RSS feeds
-          RSS means
-          Remember that RSS (Really Simple Syndication) is just a diferent way to write XML (Extensible Markup Language). So, you must use the <a href="http://www.w3.org/TR/REC-xml" title="W3C XML 1.0 Recomendations Fifth Edition Site">XML specification</a> in it's latest version.
-      </li>
-      <li>
-          For now, we only provide semantic content using your RSS feeds, using a <a href="https://github.com/W3CBrasil/od4d-rss-to-turtle">converter</a>. But in the next months we will work in something that will take advantage of your semantic content to link it using RDF format. Then we will have a OD4D connected network, provided by the best aspects of the Semantic Web and Linked Data.
-      </li>
-    </ol>
+    You deliver RSS feeds RSS means remember that RSS (Really Simple Syndication) is just a diferent way to write XML (Extensible Markup Language). So, you must use the <a href="http://www.w3.org/TR/REC-xml"/><em>XML specification</em></a> in it's latest version.
+  </p>
+  <br>
+  <h3>Step 2</h3>   
+  <p>
+    For now, we only provide semantic content using your RSS feeds, using a <a href="https://github.com/W3CBrasil/od4d-rss-to-turtle"><em>converter</em></a>. But in the next months we will work in something that will take advantage of your semantic content to link it using RDF format. Then we will have a OD4D connected network, provided by the best aspects of the Semantic Web and Linked Data.
   </p>
 </article>
