--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,17 +9,17 @@
         <article id="<%=article.slug%>" class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
         <h2 class="Feeds" property="schema:headline"><a href=<%=article.url%>><%= article.title %></a></h2>
         <%if !article.author.blank? then%>
-                <p class="author" property="schema:author">Author: <%= article.author %></p>
+                <p class="author" property="schema:author">By: <%= article.author %></p>
         <%end%>
         <%if !article.datePublished.blank? then%>
                 <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>">Date: <%=article.datePublished.strftime("%m/%d/%Y") %></p>
         <%end%>
         <div class="social-buttons">
-                <a href="<%=article.share_twitter%>"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+                <a href="<%=article.share_twitter%>"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter") %></a>
                 &nbsp;
-                <a href="<%=article.share_linkedin%>"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+                <a href="<%=article.share_linkedin%>"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn") %></a>
                 &nbsp;
-                <a href="<%=article.share_googleplus%>"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+                <a href="<%=article.share_googleplus%>"><%= image_tag("logo-gplus.png", :alt => "Share with Google+") %></a>
         </div>
         <p class="category" property="schema:articleSection"> <%= article.articleSection.join(", ") %></p>
         <%if !article.summary.blank? %>
@@ -28,7 +28,6 @@
                 <p class="summary" property="schema:description"> <%= article.description %></p>
         <%end%>
 
-        <button tabindex="-1" class="button"><a property="schema:url" href=<%=article.url%>>Read More</a></button>
         </article>
 <% end %>
 </section>
