--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -10,7 +10,7 @@
     <% @partners.each do |partner| %>
       <article id="<%= partner.slug %>" class="rss" typeof="schema:Organization" resource="<%=partner.url%>">
         <h2 property="schema:name"><a href=<%= partner.url %>><%= partner.name %></a></h2>
-        <%= image_tag(partner.logo, :alt => partner.name, :size => "250x90", :property => "schema:logo") %>
+        <%= image_tag(partner.logo, :alt => partner.name, :property => "schema:logo") %>
         <div property="schema:description">
           <%= partner.description %>
         </div>
