added partners logos for feeds fixed homepage content wrap

--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -7,6 +7,15 @@
  	margin-top: 20px;	
 }
 
+.home-left {
+	width: 65%;
+	width: 55%;
+ 	margin: 0px;
+ 	position: relative;
+ 	display: inline-block;
+ }
+
+
 .home-right {
 	width: 39%;
 	margin: 0px;
