--- a/app/views/learn/glossary.html.erb
+++ b/app/views/learn/glossary.html.erb
@@ -13,19 +13,33 @@
 
   <section resource="#glossary">
 
-    <p id="onthology"><em>Onthology</em><br>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".</p>
+    <p id="copyright">
+      <em>Copyright</em><br>Moral right, irrevocable and inalienable. It is an exclusive right of exploitation that a person has over its literary, artistic and scientific creations.
+    </p>
 
-    <p id="vocabulary"><em>Vocabulary</em><br>Vocabularies are predefined terms for different Objects in certain subject areas, with this predefined vocabularies, applications/tools/other web sites that makes use of this data can better understand it when common and popular vocabularies are used.</p>
+    <p id="license">
+      <em>License</em><br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
+    </p>
 
-    <p id="copyright"><em>Copyright</em><br>Moral right, irrevocable and inalienable. It is an exclusive right of exploitation that a person has over its literary, artistic and scientific creations.</p>
+    <p id="onthology">
+      <em>Onthology</em><br>Onthologies are a set of vocabularies that are able to describe an subject area. For instance an Onthology of Intelectual property, might include vocabularies to describe any form of text, media, etc. Article, Video, Audio, are examples of vocabularies that could be inside a Onthology called "Intelectual Property Onthology".
+    </p>
 
-    <p id="license"><em>License</em><br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.</p>
+    <p id="rdfa">
+      <em>RDFa</em> (Resource Description Framework-in-attributes):<br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
+    </p>
 
-    <p id="uri"><em>URI (Uniform Resource Identifier):</em><br>It is a short string that uniquely identifies a resource (service, page, document, email, encyclopedia, etc.). Usually these resources are accessible on a network or system. The URI can be Uniform Resource Locators (URLs), Uniform Resource Name (URN), or both (URL + URN).</p>
+    <p id="semantic">
+      <em>Semantic</em><br>Semantic: Particular way of inferring facts or ideas from a word or phrase.
+    </p>
 
-    <p id="rdfa"><em>RDFa</em> (Resource Description Framework-in-attributes):<br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.</p>
+    <p id="uri">
+      <em>URI (Uniform Resource Identifier):</em><br>It is a short string that uniquely identifies a resource (service, page, document, email, encyclopedia, etc.). Usually these resources are accessible on a network or system. The URI can be Uniform Resource Locators (URLs), Uniform Resource Name (URN), or both (URL + URN).
+    </p>
 
-    <p id="semantic"><em>Semantic</em><br>Semantic: Particular way of inferring facts or ideas from a word or phrase.</p>
+    <p id="vocabulary">
+      <em>Vocabulary</em><br>Vocabularies are predefined terms for different Objects in certain subject areas, with this predefined vocabularies, applications/tools/other web sites that makes use of this data can better understand it when common and popular vocabularies are used.
+    </p>
 
   </section>
 </article>
