--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -2,7 +2,7 @@
   <title>Open Data for Development - Practical Cases</title>
 <% end %>
 
-<section class="main cases" role="main">
+<section class="cases">
   <h1>Practical Cases</h1>
   <% @practical_cases.each do |practical_case| %>
     <article id="<%=practical_case.slug%>" class="rss" resource="<%=practical_case.url%>" typeof="schema:Article">
