--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,9 @@
     </div>
   </header>
 
-  <%= yield %>
+  <div class="main" role="main">
+    <%= yield %>
+  </div>
 
   <footer class="inner-shadow clear" role="contentinfo">
     <div class="center-box out-shadow">
