--- a/app/views/learn/introduction_to_rdf_and_rdfa.html.erb
+++ b/app/views/learn/introduction_to_rdf_and_rdfa.html.erb
@@ -4,7 +4,7 @@
   <title>Open Data for Development - Introduction to RDF and RDFa</title>
 <% end %>
 
-  <article class="main" resource="<%= request.original_url %>" typeof="schema:Article">
+  <article resource="<%= request.original_url %>" typeof="schema:Article">
     <h1 property="schema:headline">Introduction to RDF and RDFa</h1>
     <meta property="schema:datePublished" content="2014-07-08"/>
     <meta property="schema:wordCount" content="503"/>
