--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,8 @@
 <% content_for :head do %>
   <title>Open Data for Development - About</title>
 <% end %>
-  <article class="main" resource="#about" typeof="schema:Article" role="main">
+
+  <article resource="#about" typeof="schema:Article">
     <h1 property="schema:headline">About the Project</h1>
     <meta property="schema:datePublished" content="2014-06-20"/>
     <meta property="schema:inLanguage" content="en-US"/>
