--- a/app/views/pages/terms_and_conditions.html.erb
+++ b/app/views/pages/terms_and_conditions.html.erb
@@ -2,7 +2,7 @@
   <title>Open Data for Development - Terms and Conditions</title>
 <% end %>
 
-  <section class="main" resource="#terms-and-conditions" typeof="schema:Article">
+  <section resource="#terms-and-conditions" typeof="schema:Article">
     <h1 property="schema:headline">General Terms and Conditions of use of the Portal OD4D - Open Data For Development</h1>
     <meta property="schema:datePublished" content="2014-07-08"/>
     <meta property="schema:inLanguage" content="en-US"/>
