--- a/app/views/learn/glossary.html.erb
+++ b/app/views/learn/glossary.html.erb
@@ -3,7 +3,7 @@
   <title>Open Data for Development - Glossary</title>
 <% end %>
 
-<article class="main" resource="<%= request.original_url %>" typeof="schema:Article" role="main">
+<article resource="<%= request.original_url %>" typeof="schema:Article">
   <h1 property="schema:headline">Glossary</h1>
   <meta property="schema:datePublished" content="2014-06-20"/>
   <meta property="schema:inLanguage" content="en-US"/>
