--- a/app/views/learn/how_to_integrate_with_od4d.html.erb
+++ b/app/views/learn/how_to_integrate_with_od4d.html.erb
@@ -2,7 +2,7 @@
   <title>Open Data for Development - How to integrate</title>
 <% end %>
 
-<article class="main" resource="<%= request.original_url %>" typeof="schema:Article">
+<article resource="<%= request.original_url %>" typeof="schema:Article">
   <h1 property="schema:headline">How to integrate your site with OD4D network</h1>
   <meta property="schema:datePublished" content="2014-07-09"/>
   <meta property="schema:inLanguage" content="en-US"/>
@@ -16,13 +16,13 @@
   <p>This includes being an example itself of an Open Data website, of course. To know more about the technical details of this project you can acess it's GitHub repository or ask us about it. </p>
   <p>You can be part of this Network. If you have a research institute or even an academic paper, you can let the network know by connecting your website to OD4D's Network using simple  <a href="http://www.w3.org/standards/semanticweb/data"><em>linked data</em></a> concepts. In case you  have no idea on how to work with Linked Data, <em><%= link_to("read this", controller: "learn", action: "how_to_create_a_semantic_page") %></em>.</p>
   <h2> You can start with step one and then jump in to the second step described below: </h2>
-  <br> 
+  <br>
   <h3>Step 1</h3>
   <p>
     You deliver RSS feeds RSS means remember that RSS (Really Simple Syndication) is just a diferent way to write XML (Extensible Markup Language). So, you must use the <a href="http://www.w3.org/TR/REC-xml"/><em>XML specification</em></a> in it's latest version.
   </p>
   <br>
-  <h3>Step 2</h3>   
+  <h3>Step 2</h3>
   <p>
     For now, we only provide semantic content using your RSS feeds, using a <a href="https://github.com/W3CBrasil/od4d-rss-to-turtle"><em>converter</em></a>. But in the next months we will work in something that will take advantage of your semantic content to link it using RDF format. Then we will have a OD4D connected network, provided by the best aspects of the Semantic Web and Linked Data.
   </p>
