Fixed more issues with div/section tags.

--- a/app/views/pages/terms_and_conditions.html.erb
+++ b/app/views/pages/terms_and_conditions.html.erb
@@ -2,7 +2,7 @@
   <title>Open Data for Development - Terms and Conditions</title>
 <% end %>
 
-  <section resource="#terms-and-conditions" typeof="schema:Article">
+  <article resource="#terms-and-conditions" typeof="schema:Article">
     <h1 property="schema:headline">General Terms and Conditions of use of the Portal OD4D - Open Data For Development</h1>
     <meta property="schema:datePublished" content="2014-07-08"/>
     <meta property="schema:inLanguage" content="en-US"/>
@@ -78,4 +78,4 @@
     <p>8.1. -The present Terms of Use are governed solely by the laws of the Federative Republic of Brazil and any legal disputes arising from their interpretation or enforcement must be arbitrated by a Brazilian court of law.</p>
     <p>8.2 The Central Court of the District of São Paulo, State of São Paulo, shall have sole jurisdiction to resolve any questions or disputes in connection with these General Terms and Conditions of Use, to the detriment of any other jurisdiction, however privileged.</p>
     <p><em>Any person (User) intending to use the portal, must read and make sure to have understood all of the &#8220;General Terms and Conditions&#8221; applicable to the use of the portal. Accepting these &#8220;General Terms and Conditions&#8221; is an absolute requirement for using the portal.</em></p>
-  </section>
+  </article>
