--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,32 +9,30 @@
     <meta property="schema:copyrightHolder" content="W3C"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="about;od4d"/>
-    <section id="Video">
-      <p id="od4d-about-video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
-        <meta property="schema:name" content="Open Government Data and OD4D "/>
-        <div class="video-container">
-          <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
-        </div>
-      </p>
-    </section>
-    <section property="schema:description">
-      <section id="Introduction">
-        <h2>Introduction</h2>
-        <p>The release of information in open, accessible and structured formats has the potential to substantially improve transparency and accountability regarding the development and implementation of public policies, as well as opening doors for wide participation of civil society in the process.</p>
 
-        <p>The availability of data and can bring greater recognition of the demands of the citizen and transform the way governments do business and public policies. This can be a tool for promoting social equality and effectiveness of public administration.</p>
+    <p id="od4d-about-video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
+      <meta property="schema:name" content="Open Government Data and OD4D "/>
+      <div class="video-container">
+        <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
+      </div>
+    </p>
 
-        <p>The research project on the impact and potential of Open Data to Public Policy in Latin America and the Caribbean took place for two years - July 2011 to July 2013 - and was conducted by the W3C Brazil Office and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><em>ECLAC</em></a>), of the United Nations, and funded by the Canada's International Development Research Centre (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><em>IDRC</em></a>).</p>
+    <section id="Introduction" property="schema:description">
+      <h2>Introduction</h2>
+      <p>The release of information in open, accessible and structured formats has the potential to substantially improve transparency and accountability regarding the development and implementation of public policies, as well as opening doors for wide participation of civil society in the process.</p>
 
-        <p>The main goal was to contribute for the development of Open Data strategies that lead to accountability of public policies, supporting new analysis, creating new services and and fostering an equitable development of key industries, promoting a more inclusive knowledge economy in Latin America and the Caribbean. To achieve this goal, the potential of Open Data in public policy was investigated in 3 areas: transparency, new services and equitable development.</p>
-        <p>Strategies were adopted to sensitize governments and civil society regarding the usefulness and potential of Open Data to public policy. The research emerged that the use of Open Data can be a large contribution to the development of local economies.</p>
-        <p>There is the need to design a value chain of open data, considering its supply and demand. Finally, the project concluded that it would be important to comprehend a business model that could be sustainable in order to build a model of maturity in open data.</p>
-        <p>The strategy for the new website is to achieve relevant impact through actions and tangible products. This is crucial to get the attention of the community of experts, government officials and researchers to establish new strategies around open data. Open data works better through examples and cases. <em>Examples and cases means cyclic and mature processes.</em></p>
-        <p>To continue the project Open Data for Development and to extend it beyond this region, <a href="http://www.w3c.org"><em>W3C Brazil</em></a> proposes to reformulate the platform www.od4d.org to expand and <em>strengthen the existing community, collecting use cases, referencing best practices, promoting standards and relevant vocabularies, emphasizing the value of multilingual content in the existing platform.</em></p>
-      </section>
+      <p>The availability of data and can bring greater recognition of the demands of the citizen and transform the way governments do business and public policies. This can be a tool for promoting social equality and effectiveness of public administration.</p>
+
+      <p>The research project on the impact and potential of Open Data to Public Policy in Latin America and the Caribbean took place for two years - July 2011 to July 2013 - and was conducted by the W3C Brazil Office and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><em>ECLAC</em></a>), of the United Nations, and funded by the Canada's International Development Research Centre (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><em>IDRC</em></a>).</p>
+
+      <p>The main goal was to contribute for the development of Open Data strategies that lead to accountability of public policies, supporting new analysis, creating new services and and fostering an equitable development of key industries, promoting a more inclusive knowledge economy in Latin America and the Caribbean. To achieve this goal, the potential of Open Data in public policy was investigated in 3 areas: transparency, new services and equitable development.</p>
+      <p>Strategies were adopted to sensitize governments and civil society regarding the usefulness and potential of Open Data to public policy. The research emerged that the use of Open Data can be a large contribution to the development of local economies.</p>
+      <p>There is the need to design a value chain of open data, considering its supply and demand. Finally, the project concluded that it would be important to comprehend a business model that could be sustainable in order to build a model of maturity in open data.</p>
+      <p>The strategy for the new website is to achieve relevant impact through actions and tangible products. This is crucial to get the attention of the community of experts, government officials and researchers to establish new strategies around open data. Open data works better through examples and cases. <em>Examples and cases means cyclic and mature processes.</em></p>
+      <p>To continue the project Open Data for Development and to extend it beyond this region, <a href="http://www.w3c.org"><em>W3C Brazil</em></a> proposes to reformulate the platform www.od4d.org to expand and <em>strengthen the existing community, collecting use cases, referencing best practices, promoting standards and relevant vocabularies, emphasizing the value of multilingual content in the existing platform.</em></p>
     </section>
 
-    <section property="schema:articleBody" class="articleContainer">
+    <div property="schema:articleBody" class="articleContainer">
       <section id="Objectives" class="leftColumn">
         <h2>OD4D Objectives</h2>
           <p>The new OD4D platform should be inclusive and accessible to provide a common space for the open data community, which will serve as a reference for individuals and institutions interested in putting into practice concepts of data on the web, open data and transparency.</p>
@@ -74,7 +72,7 @@
         </ul>
         <p>Check out the whole OD4D proposal (in English): <a href="http://www.od4d.org/wp-content/uploads/2012/10/Open-Data-Projet-Proposal-29-de-marzo-31.pdf"><em>Open-Data-Projet-Proposal</em></a> - PDF (616KB)</p>
       </section>
-    </section>
+    </div>
 
     <section>
       <p>Author:
