--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -17,7 +17,7 @@
       </div>
     </p>
 
-    <section id="Introduction" property="schema:description">
+    <section id="introduction" property="schema:description">
       <h2>Introduction</h2>
       <p>The release of information in open, accessible and structured formats has the potential to substantially improve transparency and accountability regarding the development and implementation of public policies, as well as opening doors for wide participation of civil society in the process.</p>
 
@@ -33,7 +33,7 @@
     </section>
 
     <div property="schema:articleBody" class="articleContainer">
-      <section id="Objectives" class="leftColumn">
+      <section id="objectives" class="leftColumn">
         <h2>OD4D Objectives</h2>
           <p>The new OD4D platform should be inclusive and accessible to provide a common space for the open data community, which will serve as a reference for individuals and institutions interested in putting into practice concepts of data on the web, open data and transparency.</p>
           <p>The platform serves as a hub for investors, governments, institutions and individuals who intend to work together to create a collaborative network around the theme.</p>
@@ -48,7 +48,7 @@
           <p>The expected final result will be <em>the use of a Open Data website as a case for Open Data, connecting networks with innovative resources to foster the Open Data value chain.</em></p>
       </section>
 
-      <section id="Specific-Tasks" class="rightColumn">
+      <section id="specific-Tasks" class="rightColumn">
         <h2>Goals</h2>
         <ul>
           <li>The od4d.org new platform will serve as connection among regional open data initiatives in Latin America, Africa, Asia and the Caribbean.</li>
@@ -57,7 +57,7 @@
         </ul>
       </section>
 
-      <section id="Intended-Results">
+      <section id="intended-Results">
         <h2>Intended results:</h2>
         <ul>
           <li>
