Replacing p with div as a container of the video element in about page.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -10,12 +10,12 @@
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="about;od4d"/>
 
-    <p id="od4d-about-video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
+    <div id="od4d-about-video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
       <meta property="schema:name" content="Open Government Data and OD4D "/>
       <div class="video-container">
         <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
       </div>
-    </p>
+    </div>
 
     <section id="introduction" property="schema:description">
       <h2>Introduction</h2>
