Renaming link text to be the actual title and not the url.

--- a/app/views/learn/how_to_create_a_semantic_page.html.erb
+++ b/app/views/learn/how_to_create_a_semantic_page.html.erb
@@ -16,7 +16,7 @@
 
     <h2>RDFa:</h2>
     <p>RDFa is a extension markup for HTML, with this you can put semantic data in your HTML, static or dynamic, other web sites can reason about it without accessing your database. For instance, search engines use this information to display better search results, with better ranking, and more precise searches. Here is how it might appear for a semantic web site:</p>
-    <p><a href="https://support.google.com/webmasters/answer/1408986?hl=en">https://support.google.com/webmasters/answer/1408986?hl=en</a></p>
+    <p><a href="https://support.google.com/webmasters/answer/1408986?hl=en">Google Support - Author information in search results</a></p>
 
     <p>Most common, and recommended <%= link_to("vocabularies", controller: "learn", action: "glossary", anchor: "vocabulary") %>: http://schema.org/, DBPedia, others?</p>
 
