Modified glossary term to bold according to another terms style.

--- a/app/views/learn/glossary.html.erb
+++ b/app/views/learn/glossary.html.erb
@@ -24,7 +24,7 @@
   </p>
 
   <p id="rdfa">
-    <em>RDFa</em> (Resource Description Framework-in-attributes):<br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
+    <em>RDFa (Resource Description Framework-in-attributes):</em><br>Information about the copyright of the dataset. Using a license is essential to provide clarity and certainty to users about the possible uses of the information contained in the datasets. For purposes of the release of the datasets and to facilitate their reuse, the following basic conditions must be respected: a) keep the original sense of the information b) cite the source of the information, c) publish when the information was updated the last time.
   </p>
 
   <p id="semantic">
